/*
 * LICENSE HERE
 */

syntax = "proto3";

import "common/entities.proto";

package bareos.config;

// ist "Config" der richigte Name f√ºr diesen Dienst?

service Config {
  rpc ListClients (ListClientsRequest) returns (stream ListClientsResponse);
  rpc ListJobs (ListJobsRequest) returns (stream ListJobsResponse);
  rpc ListCatalogs (ListCatalogsRequest) returns (ListCatalogsResponse);
};

message ListClientsRequest {
};


message ListClientsResponse {
  bareos.common.Client client = 1;
};


message JobTypeFilter {
  bareos.common.JobType select = 1;
};

message JobFilter {
  oneof filter_type {
    JobTypeFilter type = 1;
  }
};

message ListJobsRequest {
  // if no filter is set, then all jobs are accepted,
  // otherwise only jobs are accepted that match all
  // of the supplied filters
  repeated JobFilter filters = 1;
};

message ListJobsResponse {
  bareos.common.Job job = 1;
};

message ListCatalogsRequest {
};

message ListCatalogsResponse {
  repeated bareos.common.Catalog catalogs = 1;
};
